--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="buttons-inline">
-        <button class="inner" type="submit">Load Pdf</button>
-        <button class="inner">Save Pdf</button>
+        <button class="inner" type="submit"><span class="first">Load</span> PDF</button>
+        <button class="inner"><span class="first">Save</span> PDF</button>
     </div>
 </body>
 </html>
